메인 화면 저장한 장소 목록 조회 : refactor : 코드 일관성을 위한 수정 https://github.com/TEAM-Tripgether/Tripgether-BE/issues/80